--- a/templates/public/help.tmpl
+++ b/templates/public/help.tmpl
@@ -50,7 +50,7 @@
     </h3>
     
         
-        <div class="help-img"><img alt="Screenshot of progress bar" src="/img/help03.png" /></div>
+        <div class="help-img-float"><img alt="Screenshot of progress bar" src="/img/help03.png" /></div>
         <p>The search will begin, and your page will start updating. Wait for the “Searching...” progress bar in the upper left to finish loading (it's very
         fast!).</p>
 
@@ -110,7 +110,7 @@
 <h3>Sorting the results, and moving from page to page</h3>
 
     
-    <div class="help-img"><img alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img/help09.png"/></div>
+    <div class="help-img-float"><img alt="Screenshot of dropdown list, choose from 4 options, relevance, title, newest, oldest" src="/img/help09.png"/></div>
 
     <p>Search results are sorted by <strong>relevance</strong> by default. This will place the books that most closely match your search terms at the top of the
     list.
