--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -15,13 +15,16 @@ $('document').ready(function(){
 </script>
 <div id="clear"></div>
 
+<div id="content">
+
 <div id="aside-img-welcome">
     <img src='/img/card_catalogue.jpg' alt="card catalogue cabinet"/><br />
     <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
+    <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
   </div>
 
 <div id="main-info-welcome">
-<p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
+
 <div class="login">
 
   <form action="/cgi-bin/public.cgi" method="post" name="loginform" id="loginform">
@@ -45,16 +48,17 @@ $('document').ready(function(){
 
       <div class="login-footer">
         <p>Don&rsquo;t have an account?</p>
-          <a href="?rm=registration_form" type="button" role="button" id="fill-button" class="public-style">Sign Up!</a>
+          <a href="?rm=registration_form" >Sign up now</a>
           <p>If you cannot remember your user name or password, please contact your local public library.</p>
-      
 
     </div><!--div class login-->
+
     <input type="hidden" value="https://localhost/cgi-bin/public.cgi?rm=search_form;submit=Log%20in" name="destination">
     <input type="hidden" value="authen_login" name="rm">
   </form>
 </div>
 </div>
+</div><!--div id content-->
 
 <script language="JavaScript" type="text/javascript">
   $('#csstabs').hide();
