strong on sign up

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -47,7 +47,7 @@ $('document').ready(function(){
         
 
         <div class="login-footer">
-          <p>Don&rsquo;t have an account? <a href="?rm=registration_form" >Sign up now</a></p>
+          <p><strong>Don&rsquo;t have an account? <a href="?rm=registration_form" >Sign up now</a></strong></p>
             <p>If you cannot remember your user name or password, please contact your local public library.</p>
         </div>
 
