--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -32,7 +32,7 @@ $('document').ready(function(){
 
           <legend>Patron Login</legend>
 
-            <label for="authen_username">User Name</label>
+            <label for="authen_loginfield">User Name</label>
             <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
 
             <label for="authen_password">Password</label>
