--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -35,7 +35,7 @@ $('document').ready(function(){
             <label for="authen_loginfield">User Name</label>
             <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
 
-            <label for="authen_password">Password</label>
+            <label for="authen_passwordfield">Password</label>
             <input type="password" name="authen_password" tabindex="2" id="authen_passwordfield" /><br>
 
           </fieldset>
