Changed login legend

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -30,7 +30,7 @@ $('document').ready(function(){
     <form action="/cgi-bin/public.cgi" method="post" name="loginform" id="loginform">
           <fieldset name="login">
 
-          <legend>Patron Login</legend>
+          <legend>Login</legend>
 
             <label for="authen_loginfield">User Name</label>
             <input type="text" value="" autocapitalize="off" name="authen_username" tabindex="1" id="authen_loginfield" /><br>
