--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -6,7 +6,7 @@
 $('document').ready(function(){
 
     $("#search").hide();
-    //$(".inline-items").children().hide();
+    $(".inline-items").children().hide();
     $(".inline-items").children(":contains('home')").show();
     $("#fill-button").hide();  // hide the logout button, as it makes no sense here
 
