new login image

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -18,8 +18,7 @@ $('document').ready(function(){
 <div id="content">
 
 <div id="aside-img-welcome" class="tone-box">
-    <img src='/img/card_catalogue.jpg' alt="card catalogue cabinet"/><br />
-    <p class="note">Image care of <a href="https://www.flickr.com/photos/misshaley/515045131/">Haley</a></p>
+    <img src='/img/fill-search.jpg' alt="open book"/><br />
     <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
 </div>
 
