--- a/templates/public/header.tmpl
+++ b/templates/public/header.tmpl
@@ -27,6 +27,8 @@
 
 
 <script type="text/javascript" src="/js/jquery-1.11.1.js"></script>  <!-- change to jquer-1.11.1.min.js before going to production -->
+<script type="text/javascript" src="/js/jquery.cookie.js"></script>
+
 <script type="text/javascript" src="/plugins/jquery-ui-1.11.1/jquery-ui.js"></script>
 <script type="text/javascript" src="/js/menu-counters-1.0.js"></script>
 
@@ -37,11 +39,16 @@
 <script type="text/javascript">
 $('document').ready(function(){
 
+    setFontSizeFromCookies();
+
     $('#incrFont').click(function () {
         increaseFontSize();
     });
     $('#decrFont').click(function () {
         decreaseFontSize();
+    });
+    $('#resetFont').click(function () {
+        resetFontSizeToDefault();
     });
 
 });
@@ -59,16 +66,38 @@ $('document').ready(function(){
 
  function increaseFontSize() {
     $('body').find('div, h1, h2, h3, p, td').each(function () {
+        var fs = parseFloat($(this).css('font-size')) + 1;  // gets converted to px
         $(this).css({
-            'font-size': parseFloat($(this).css('font-size')) + 1
+            'font-size': fs + "px"
         });
+        $.cookie('fILL-fontsize-'+$(this)[0].tagName, fs, { expires: 365, path: '/' });
     });
  }
  function decreaseFontSize() {
     $('body').find('div, h1, h2, h3, p, td').each(function () {
+        var fs = parseFloat($(this).css('font-size')) - 1;
         $(this).css({
-            'font-size': parseFloat($(this).css('font-size')) - 1
+            'font-size': fs + "px"
         });
+        $.cookie('fILL-fontsize-'+$(this)[0].tagName, fs, { expires: 365, path: '/' });
+    });
+  } 
+ function resetFontSizeToDefault() {
+    $('body').find('div, h1, h2, h3, p, td').each(function () {
+        if (typeof $.cookie('fILL-fontsize-'+$(this)[0].tagName) != 'undefined') {
+            $.removeCookie('fILL-fontsize-'+$(this)[0].tagName, { expires: 365, path: '/' });
+        }
+    });
+    location.reload();
+  } 
+ function setFontSizeFromCookies() {
+    $('body').find('div, h1, h2, h3, p, td').each(function () {
+        if (typeof $.cookie('fILL-fontsize-'+$(this)[0].tagName) != 'undefined') {
+            var fs = $.cookie('fILL-fontsize-'+$(this)[0].tagName);
+            $(this).css({
+                'font-size': fs + "px"
+            });
+        }
     });
   } 
 
@@ -115,7 +144,7 @@ $('document').ready(function(){
         <div id="username"><TMPL_VAR name="username"></div>
         <p><a href="/cgi-bin/public.cgi?rm=contact_form"><strong><TMPL_VAR name="library"></strong></a></p>
         <div id="lid" style="display:none"><TMPL_VAR name="lid"></div>
-	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="decrFont" class="public-style" type="button" value="-A" />
+	<input id="incrFont" class="public-style" type="button" value="+A" /><input id="resetFont" class="public-style" type="button" value="A" /><input id="decrFont" class="public-style" type="button" value="-A" />
     </div>
   </div>
 
