hide font size buttons on library and public logged-out pages, and hide new default font size button on library login page

--- a/templates/logged_out.tmpl
+++ b/templates/logged_out.tmpl
@@ -11,6 +11,7 @@ $('document').ready(function(){
     $("#theme3").hide();
     $("#incrFont").hide();
     $("#decrFont").hide();
+    $("#resetFont").hide();
 
 });
 </script>
