--- a/templates/login.tmpl
+++ b/templates/login.tmpl
@@ -12,6 +12,7 @@ $('document').ready(function(){
     $("#theme3").hide();
     $("#incrFont").hide();
     $("#decrFont").hide();
+    $("#resetFont").hide();
 });
 </script>
 
