--- a/templates/public/logged_out.tmpl
+++ b/templates/public/logged_out.tmpl
@@ -1,5 +1,21 @@
 <TMPL_INCLUDE NAME="header.tmpl">
 
+<script type="text/javascript">
+$('document').ready(function(){
+
+    $("#search").hide();
+    $(".inline-items").children().hide();
+    $("#fill-button").hide();  // hide the logout button, as it makes no sense here
+    $("#theme1").hide();
+    $("#theme2").hide();
+    $("#theme3").hide();
+    $("#incrFont").hide();
+    $("#decrFont").hide();
+    $("#resetFont").hide();
+
+});
+</script>
+
 <div class="clear">
 
 	<div id="content">
