moved patrons list menu into account menu

--- a/templates/patrons/patrons.tmpl
+++ b/templates/patrons/patrons.tmpl
@@ -1,12 +1,12 @@
 <TMPL_INCLUDE NAME="header.tmpl">
-<TMPL_INCLUDE NAME="submenu_patrons.tmpl">
+<TMPL_INCLUDE NAME="submenu_myaccount.tmpl">
 
 <script type="text/javascript" src="/js/jquery.jeditable.js"></script>
 <script type="text/javascript" src="/js/patrons-list-1.0.js"></script>
 
 
 <script type="text/javascript">
-set_secondary_tab("menu_patrons_list");
+set_secondary_tab("menu_myaccount_patrons");
 
 $.ajaxSetup ({  
   cache: false  
