--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -17,15 +17,22 @@
       </a>
     </li>
 
-    <li id="menu_myaccount_test_zserver">
-      <a href="/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form">
-      Test my zServer
+    <li id="menu_myaccount_patrons">
+      <!-- Note that this is invoking a different cgi script... -->
+      <a href="/cgi-bin/patrons.cgi?rm=patrons_form">
+	Patron list
       </a>
     </li>
 
     <li id="menu_myaccount_acquisitions">
       <a href="/cgi-bin/myaccount.cgi?rm=myaccount_acquisitions_form">
       Wish list
+      </a>
+    </li>
+
+    <li id="menu_myaccount_test_zserver">
+      <a href="/cgi-bin/myaccount.cgi?rm=myaccount_test_zserver_form">
+	Test my zServer
       </a>
     </li>
 
