--- a/templates/footer.tmpl
+++ b/templates/footer.tmpl
@@ -4,6 +4,7 @@
 <div id="nav2">
     
     <a href="/cgi-bin/lightning.cgi?rm=environment_form">ENV display</a><span style="color:#aabdba;"> | </span><a href="?authen_logout=1">Log out</a>
+    <a href="/cgi-bin/admin.cgi">Admin</a><span style="color:#aabdba;"> | </span>
 
 </div>
 </footer>
