added links to staff and admin login pages to the public login footer, so that public login can become the default landing page

--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -10,6 +10,9 @@ $('document').ready(function(){
     $(".inline-items").children(":contains('home')").show();
     $("#fill-button").hide();  // hide the logout button, as it makes no sense here
 
+    $("#nav2").append(' | </span><a href="/cgi-bin/lightning.cgi">Library Staff</a>');
+    $("#nav2").append(' | </span><a href="/cgi-bin/admin.cgi">Admin</a><span style="color:#aabdba;">');
+
 });
 
 </script>
