--- a/templates/public/login.tmpl
+++ b/templates/public/login.tmpl
@@ -24,6 +24,8 @@ $('document').ready(function(){
 
 <div id="aside-img-welcome" class="tone-box">
     <img src='/img/fill-search.jpg' alt="open book"/><br />
+    <p class="note">Image care of <a href="http://pixabay.com/en/book-open-pages-library-books-92771/">kshelton</a>
+
     <p id="welcome-text">Welcome to the Manitoba public libraries' interlibrary loan system.</p>
 </div>
 
