--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -257,7 +257,7 @@ $('document').ready(function(){
   <div id="patron-info">
     <p style="display:none"><TMPL_VAR NAME="username"></p>
     <p id="library_name"><TMPL_VAR NAME="library"></p>
-    <p id="lid" style="display:none"><TMPL_VAR NAME="lid"></p>
+    <p id="lid" style="display:none"><TMPL_VAR NAME="lid"></p>  <!-- used in a LOT of js files -->
     <input id="theme1" class="theme-chooser1" type="button" value="A" />
     <input id="theme2" class="theme-chooser2" type="button" value="A" />
     <input id="theme3" class="theme-chooser3" type="button" value="A" />
