--- a/templates/public/contact.tmpl
+++ b/templates/public/contact.tmpl
@@ -8,7 +8,7 @@
 	<div id="main-info-left" class="tone-box" role="main">
 	<h1>Contact</h1>
 	    <p>If you require additional help requesting an item through fILL please visit or contact your local public library.</p>
-			<h3><TMPL_VAR name="library"></h3>
+			<h2><TMPL_VAR name="library"></h2>
 			<p>Phone: <TMPL_VAR name="phone"></p>
 			<p>Email: <a href='mailto:<TMPL_VAR name="email_address">'><TMPL_VAR name="email_address"></a></p>
 			<p>Address:<br/>
@@ -20,9 +20,8 @@
 	</div>
 
 	<div id="aside-img-right" role="complimentary">
-		<img src="/img/fill-contact.jpg" alt="Child sitting on a the floor of a book store, engrossed in reading">
-		      <p class="note">Image care of <a href="https://www.flickr.com/photos/48439369@N00/2100913578">Tim Pierce</a></p>
-
+	  <img src="<TMPL_VAR name='logo_path'>" alt="<TMPL_VAR name='logo_alt_text'>" />
+	  <p class="note">Image care of <TMPL_VAR name="logo_credit"></p>
 	</div>
 
 </div><!--div id content-->
