load untracked-by-fILL ILL numbers for libraries (eg internal-to-Spruce-coop loans) to accurately reflect net-borrower/net-lender counts

--- a/templates/admin/header.tmpl
+++ b/templates/admin/header.tmpl
@@ -226,6 +226,7 @@ $('document').ready(function(){
   <ul class="inline-items">
     <li><a id="menu_home" href="/cgi-bin/admin.cgi?rm=welcome">Home</a></li>
     <li><a id="menu_test_zserver" href="/cgi-bin/admin.cgi?rm=test_zserver">Test a zServer</a></li>
+    <li><a id="menu_load_spruce_ill_numbers" href="/cgi-bin/admin.cgi?rm=spruce_ill">Load Spruce ILL numbers</a></li>
   </ul>
 </nav>
 
