temporary moving of patrons list into library account menu looks good, so making it permanent

--- a/templates/submenu_myaccount.tmpl
+++ b/templates/submenu_myaccount.tmpl
@@ -19,7 +19,7 @@
 
     <li id="menu_myaccount_patrons">
       <!-- Note that this is invoking a different cgi script... -->
-      <a href="/cgi-bin/patrons.cgi?rm=patrons_form">
+      <a href="/cgi-bin/myaccount.cgi?rm=myaccount_patrons_form">
 	Patron list
       </a>
     </li>
