first crack at a couple of w3c validation tweaks

--- a/templates/admin/header.tmpl
+++ b/templates/admin/header.tmpl
@@ -156,7 +156,7 @@ $('document').ready(function(){
 <div id="header" class="header-library">
     <div id="header-left">
       <div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"/></a></div>
-      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+      <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
     </div>
 
   <!-- Not displayed on any page except lightning (at the moment) -->
