--- a/templates/header.tmpl
+++ b/templates/header.tmpl
@@ -248,12 +248,12 @@ $('document').ready(function(){
 <div id="header" class="header-library">
     <div id="header-left">
       <div id="fill-logo"><a href="/"><img id="theme-logo" src="/img/fill-lib-logo.png" alt="fill"/></a></div>
-      <div id="fill-tagline"><p id="fill-tagline">connecting libraries, serving patrons.</p></div>
+      <div id="fill-tagline"><p>connecting libraries, serving patrons.</p></div>
     </div>
 
   <!-- Not displayed on any page except lightning (at the moment) -->
 <div id="header-right">
-    <div id="logout-button"><a href="?authen_logout=1" type="button" role="button" id="fill-button" class="library-style">log out</a></div>
+    <div id="logout-button"><a href="?authen_logout=1" role="button" id="fill-button" class="library-style">log out</a></div>
   <div id="patron-info">
     <p style="display:none"><TMPL_VAR NAME="username"></p>
     <p id="library_name"><TMPL_VAR NAME="library"></p>
